updated links to gh

--- a/hair.html
+++ b/hair.html
@@ -8,8 +8,8 @@
   <script src="https://kit.fontawesome.com/5d2e7fcbca.js" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/5d2e7fcbca.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="./reset.css">
-  <link rel="stylesheet" href="./hair-style.css">
+  <link rel="stylesheet" href="https://dgasch512.github.io/hair/reset.css">
+  <link rel="stylesheet" href="https://dgasch512.github.io/hair/hair-style.css">
 
   <title>Hair Landing</title>
 
@@ -27,7 +27,7 @@
 
   <div class="main">
     <header class="header">
-      <img src="./logo.jpg" alt="mustache">
+      <img src="https://dgasch512.github.io/hair/logo.jpg" alt="mustache">
       <ul class="menu">
         <li class="menu-item">Home</li>
         <li class="menu-item">About</li>
