--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <div class="navbar">
-    <a href="/">Free Website Templates</a>
+    <a href="/">Propfolio</a>
     <div class="nav">
       <h5 class="nav-item">Download  <i class="fas fa-download"></i></h5>
       <h5 class="nav-item">Discuss  <i class="fas fa-comments"></i></h5>
